# wfg-API

./: .buildinfo  .gitignore  .pylintrc  LICENSE  README.html  README.md  README_internal.md  SmartWaveAPI.configitems.html  SmartWaveAPI.definitions.html  SmartWaveAPI.html  SmartWaveAPI.smartwave.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  simpleSPI.py
.github/workflows/: documentation.yml
SmartWaveAPI/: __init__.py  smartwave.py
SmartWaveAPI/configitems/: __init__.py  config.py  configentry.py  driver.py  i2cconfig.py  i2cdriver.py  pin.py  spiconfig.py  spidriver.py  stimulus.py
SmartWaveAPI/definitions/: __init__.py  command.py  drivertype.py  i2ctransaction.py  statusbit.py  triggermode.py
_sources/: README.md.txt  SmartWaveAPI.configitems.rst.txt  SmartWaveAPI.smartwave.rst.txt  modules.rst.txt
coms_test/: test_coms.py
docs/: CNAME  PythonAPI - Design Specifications.md  index.html  requirements.txt
docs/doctrees/: SmartWaveAPI.configitems.doctree  SmartWaveAPI.doctree  environment.pickle  index.doctree  modules.doctree
docs/source/: conf.py  (+3 more)
examples/: README_i2c_comms.md  bitstreamUpdate.py  consoleStarter.py  firmwareUpdate.py  fpga_reg.py  gpiotester.py  i2c-ack-adapt.py  i2c-expander-ack.py  i2c_comms_check.py  i2c_coms_check.py  imu.py  imuSPI.py  imu_conf_lib.py  imu_data_visualisation.py  imu_data_visualization.py  ina260.py  mcp9808.py  registerAccess.py  simpleI2C.py  simpleSPI.py
old/: api.py  my_test.py
src/: api.py  my_test.py
(+49 files in other folders)
